sandbox/output
OneHundredDoors.java:50: error: package Door does not exist
            if (Door.OPEN.equals(doors.get(door))) {
                    ^
1 error
